<resources>
    <string name="app_name" translatable="false">FitnessUpp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hello">hello</string>
    <string name="home">home</string>
    <string name="water">water</string>
    <string name="profile">profile</string>
    <string name="consumed">consumed</string>
    <string name="remaining">remaining</string>
    <string name="ml">ml</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="MyStatus">My Status</string>
    <string name="UserDetails">User Details</string>
    <string name="Notifications">Notifications</string>
    <string name="FingerprintSettings">Fingerprint Settings</string>
    <string name="dailystatus">daily status</string>
    <string name="language">english</string>
    <string name="selectafood">select a food</string>
    <string name="common">common</string>
    <string name="recentlyadded">Recently added</string>
    <string name="login">log In</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="Notregisteredyet">Not registered yet?</string>
    <string name="Signup">Sign Up</string>
    <string name="youarenotinourdatabase">You are not in our database, you can try Sign Up</string>
    <string name="Alreadyregistered">Already registered?</string>
    <string name="signout">Sign Out</string>
    <string name="Amount">Enter an amount</string>
    <string name="cm">cm</string>
    <string name="Kg">Kg</string>


</resources>